# OSVR-SMI

./: CMakeLists.txt  README.md  SMITrackerDevice.h  com_osvr_SMI_EyeTracker.cpp  com_osvr_SMI_EyeTracker.json  osvr_server_config.SMIeyeTracker.sample.json
cmake/: FindSMI.cmake
